--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	        <a class="nav-link " data-value="portfolio" href="#">Profile</a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link " data-value="blog" href="#">News</a>
+	        <a class="nav-link " data-value="blog" href="#">Blog</a>
 	      </li>
 	      <li class="nav-item">
 	        <a class="nav-link " data-value="contact" href="#">Contact</a>
